# interactive-story

./: .gitignore  README.md  setup.sh  start.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/story_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompts.py
frontend/: .env.example  .gcloudignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: app.ts
frontend/src/components/: a2ui-surface.ts
frontend/src/services/: a2a-client.ts
frontend/src/styles/: story.css
